# UsefulPaper

./: README.md
3rdToolDoc/Algorithm/: ReadMe.md  demo.py
3rdToolDoc/CMake/: ReadMe.md
3rdToolDoc/CMake/Complie/: ReadMe.md
3rdToolDoc/CMake/Vscode/: ReadMe.md
3rdToolDoc/Docker/: DockerUse.md  Nvidiadriver.md  OfflineinstallDocker.md
3rdToolDoc/GPU/: ReadMe.md
3rdToolDoc/GPU/TensorRT/: ReadMe.md
3rdToolDoc/Issuses/: Docker.md  disk.md  github访问.md  process.md  pythonoffline.md
3rdToolDoc/Issuses/docker/: dockertrain.md
3rdToolDoc/MILR/: ReadMe.md
3rdToolDoc/MLIR/TVM/: ReadMe.md
3rdToolDoc/OpenCV/: Opencv.md  ReadMe.md
3rdToolDoc/OptimOP/: IM2COL.md  ReadMe.md  ReadMearm.md
3rdToolDoc/OptimOP/Gemm/: ReadMe.md
3rdToolDoc/Socket/: Enc.md
3rdToolDoc/Socket/json/: json.json  main.cpp
3rdToolDoc/Socket/protobuf/: ReadMe.md
3rdToolDoc/Tesseract/: ReadMe.md
3rdToolDoc/aarch/: Context.md  ReadMe.md
3rdToolDoc/c2py/: ReadMe.md  boost.md
3rdToolDoc/c2py/py2so/: ReadMe.md
3rdToolDoc/c2py/pybind/: ReadMe.md
3rdToolDoc/pybind/: ReadMe.md  packtoso.md
3rdToolDoc/socket/: ReadMe.md  SM加密说明.md
3rdToolDoc/socket/json/: ReadMe.md
3rdToolDoc/tesseract/: ReadMe.md
3rdToolDoc/算子优化/: ReadMe.md  ReadMearm.md
Cuda/CMake/: ReadMe.md
Cuda/CudaEasy/: Cuda.md
Cuda/cudawithopencv/: CMakeLists.txt  ReadMe.md
dataAug/: ReadMe.md
paper/lossforward/: ReadMe.md
personalAdvice/: Projectadvice.md  README.md
personalAdvice/security/: README.md
selfRead/: ReadMe.md  txt.md  规范.md
selfRead/framework/: ffcnn.md
(+22 files in other folders)
